<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gesture List</string>
    <string name="clr_btn">Clear</string>
    <string name="tl_search">Search</string>
    <string name="help">Help</string>
    <string name="tl_hint">Enter name</string>
    <string name="menu">Menu</string>
    <string name="m_exit">Exit</string>
    <string name="m_back">Back</string>
    <string name="m_help">Availible gestures</string>
    <string name="m_tlist">List</string>

</resources>