<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/listbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_tlist" />

        <Button
            android:id="@+id/helpbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_help" />

        <Button
            android:id="@+id/exitbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_exit" />
    </LinearLayout>

</LinearLayout>