<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d2"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tl_search" />

        <AutoCompleteTextView
            android:id="@+id/autoComlt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:ems="9"
            android:hint="@string/tl_hint" >

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clr_btn" />
    </LinearLayout>

</LinearLayout>